Some small fixes for google sign in on ios and generally.

--- a/src/pages/intro-slides/intro-slides.scss
+++ b/src/pages/intro-slides/intro-slides.scss
@@ -142,6 +142,8 @@ page-intro-slides {
   .social-login{
     width: 100%;
     .google-login{
+      margin-top: 12px;
+      color: #4d4d4d;
       img{
         height: 22px;
         margin-right: 3px;
